k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-os
  namespace: health-os
  labels:
    app: health-os
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-os
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: health-os
    spec:
      containers:
        - name: health-os
          image: health-os:latest
          imagePullPolicy: Never        # usar imagen local en kind
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
